--- a/2 预备知识/2.1 数据操作/2.1.1 入门.md
+++ b/2 预备知识/2.1 数据操作/2.1.1 入门.md
@@ -1,14 +1,46 @@
-### torch.arange的用法 ###
-示例1：用 torch.arange 生成 0 到 11的一维张量
+### 1.torch.arange的基本用法 ###
+```python
+torch.arange(start=0, end, step=1, dtype=None, device=None)
+# 1.step：步长（默认为 1）
+# 2.如果没有写start,就是从0开始
+# 3.左闭右开
 ```
-x = torch.arange(12)
+
+**只写 end： 用 torch.arange 生成 0 到 12的一维张量**
+```python
+x = torch.arange(13)
 ```
-<img width="784" height="204" alt="image" src="https://github.com/user-attachments/assets/60e0fecb-8fce-4b5c-a2ff-3ba597787ee8" />
+
+**写 start 和 end：用 torch.arange 生成 2 到 6的一维张量**
+```python
+tensor([2, 3, 4, 5, 6])
+```
+
+**写步长 step：用 torch.arange生成从 1 到 9，步长为 2的一维张量**
+
+```
+torch.arange(start=1, end=10, step=2)
+```
+
+### 2.torch.linspace的基本用法 ###
+```python
+torch.linspace(start, end, steps=100, dtype=None, device=None)
+# 1.step：生成的点数（默认为 100）
+# 2.左闭右闭
+```
+
+**生成 0~1 的 5 个等间隔点**
+```python
+torch.linspace(0, 1, 5) #结果是包括1的
+```
+
+**生成 −π 到 π 的 1000 个点，并且只显示前10个点**
+```python
+x = torch.linspace(-torch.pi, torch.pi, 1000)[:10]
+```
+
+### 3.torch.arange和torch.linspace的区别
+<img width="901" height="543" alt="image" src="https://github.com/user-attachments/assets/7ae3ffdc-fdc5-40de-9038-5ad26f5b3ce4" />
 
 
-**示例2：用 torch.arange生成从 3 到 15，步长为 3的一维张量**
-
-```
-torch.arange(start=3, end=16, step=3)
-```
 
