--- a/2 预备知识/2.1 数据操作/2.1.1 入门.md
+++ b/2 预备知识/2.1 数据操作/2.1.1 入门.md
@@ -43,4 +43,71 @@ x = torch.linspace(-torch.pi, torch.pi, 1000)[:10]
 <img width="901" height="543" alt="image" src="https://github.com/user-attachments/assets/7ae3ffdc-fdc5-40de-9038-5ad26f5b3ce4" />
 
 
+### 4.张量的现状属性shape   (张量.shape)
 
+在PyTorch 里：```x.shape``` 是 **张量的形状信息**，返回的是一个 **torch.Size 对象**，本质上可以当成**查看张量的维度长度**。并且x.shape   ==   x.size()
+
+**查看三维张量的第1维，第2维，第3维的长度**
+```python
+import torch
+x = torch.randn(2, 3, 4)
+print(x.shape)
+```
+输出：
+```python
+torch.Size([2, 3, 4])
+# 第 0 维：长度 2
+# 第 1 维：长度 3 
+# 第 2 维：长度 4
+# 的2×3×4 的三维数组。
+```
+
+**查看一维张量（向量）的维度数和维度长度**
+```python
+import torch
+x = torch.randn(5)
+print(x.ndim)
+print(x.shape)
+```
+**查看二维张量（矩阵）的第二维维度长度**
+```python
+import torch
+x = torch.randn(3,4)
+print(x.shape[1])
+```
+**查看四维张量的最后一维的维度长度和倒数第二维的维度长度**
+```python
+import torch
+x = torch.randn(4,1,28,27) #(N, C, H, W)
+print(x.shape[-1])
+print(x.shape[-2])
+```
+
+**x.shape 和 x.size() 的关系**
+**在 PyTorch 中：```x.shape   ==   x.size()```几乎完全等价。**
+```python
+x = torch.randn(2, 3, 4)
+
+print(x.shape)      # torch.Size([2, 3, 4])
+print(x.size())     # torch.Size([2, 3, 4])
+
+print(x.size(0))    # 2  第 0 维长度
+print(x.size(1))    # 3  第 1 维长度
+print(x.size(2))    # 4  第 2 维长度
+```
+
+### 5.x.view的用法 ###
+**在不改变数据内容的情况下，改变张量形状（shape）**
+**其在应用时有一个大前提 ：x 必须是 连续内存 tensor,如果x不是连续内存要用 x.contiguous()将其转换成连续内存**
+
+**将三维张量形状改成二维张量现状**
+```python
+import torch
+x = torch.randn(2, 3, 4)
+print(x.shape)   # torch.Size([2, 3, 4])
+
+#利用x.view
+x = x.view(2, 12)
+print(x.shape)      # torch.Size([2, 12])
+
+```
