--- a/2 预备知识/2.1 数据操作/2.1.1 入门.md
+++ b/2 预备知识/2.1 数据操作/2.1.1 入门.md
@@ -1,4 +1,37 @@
+x.shape/x.size
+
+x.view/x.reshape
+
+x.unsqueeze/x.squeeze
+
+x.permute
+
+x.ndim x.numel()
+
+torch.arange/torch.linspace/
+
+torch.meshgrid
+
+torch.stack/torch.cat
+
+<img width="501" height="177" alt="image" src="https://github.com/user-attachments/assets/8bb152ae-a597-44f1-a97f-62dae18f9f33" />
+
+答案：
+```python
+x = torch.linspace(-1,1,50)
+X,Y = torch.meshgrid(x,x,indexing='ij') #X:(50,50),Y:(50,50)
+Z = torch.stack([X,Y],dim=-1) # Z : (50,50,2)
+Z = Z.reshape(2500,2) # Z : (2500,2)
+Z = Z.unsqueeze(0)
+Z = Z.permute(2,1,0)
+Z.shape
+```
 ### 1.torch.arange的基本用法 ###
+
+**只能生成一维自然数序列**
+**step：步长（默认为 1）**
+**所以x.shape=维度size，x.nidm=1**
+
 ```python
 torch.arange(start=0, end, step=1, dtype=None, device=None)
 # 1.step：步长（默认为 1）
@@ -23,6 +56,10 @@ torch.arange(start=1, end=10, step=2)
 ```
 
 ### 2.torch.linspace的基本用法 ###
+**只能生成一维序列**
+**step：生成的点数**
+**所以x.shape=维度size，x.nidm=1**
+
 ```python
 torch.linspace(start, end, steps=100, dtype=None, device=None)
 # 1.step：生成的点数（默认为 100）
@@ -152,7 +189,7 @@ x.shape # torch.Size([16, 392])
 ### 6.x.reshape的用法 ###
 
 ### 改变张量的形状（shape）,不改变数据本身和总元素个数,
-### 和 view() 类似，但更智能,和view 的关键区别是reshape() 不要求张量是连续内存
+### 和 view() 类似，但更智能,和view 的关键区别是reshape()不要求张量是连续内存
 
 *基本用法*
 ``` python
@@ -262,3 +299,119 @@ x = x.permute(2,1,0)
 x.shape   # torch.Size([4, 3, 2])
 
 ```
+### 10.torch.meshgrid的用法 ###
+
+根据**多个一维张量**生成**网格坐标矩阵**，是构造笛卡尔坐标网格最常用的函数
+
+```python
+torch.meshgrid(*tensors, indexing='ij')
+
+# *tensors：多个 1D 张量（常见 2 个或 3 个）
+# indexing
+  #'ij'（默认）矩阵索引，适合数学/张量
+  #'xy' 笛卡尔索引，适合图像坐标（与 numpy 一致）
+```
+### 11.torch.stack的用法 ###
+
+**可以指定维度来叠张量个数**
+**在一个新的维度上拼接多个张量,所有维度必须完全一致**
+**stack = 先扩维，再拼接（所有张量形状必须完全一致）,dim 决定新轴插在第几维，会有新的维度产生**
+
+```python
+torch.stack(tensors, dim=0)
+# tensors：张量列表，如 [t1, t2, t3...]
+# dim：新维度插入的位置（默认 0 维）
+```
+
+```python
+import torch
+
+a = torch.tensor([1,2,3])
+b = torch.tensor([4,5,6])
+
+c = torch.stack([a,b],dim=0) # dim 决定新轴插在第几维
+print(c)
+print(c.ndim)
+print(c.shape) 
+  #  tensor([[1, 2, 3],
+  #          [4, 5, 6]])
+  #  2
+  #  torch.Size([2, 3])
+
+```
+
+```python
+import torch
+
+a = torch.tensor([1,2,3])
+b = torch.tensor([4,5,6])
+
+c = torch.stack([a,b],dim=1) # dim 决定新轴插在第几维
+print(c)
+print(c.ndim)
+print(c.shape) 
+  #  tensor([[1, 4],
+  #          [2, 5],
+  #          [3, 6]])
+  #  2
+  #  torch.Size([3, 2])
+
+```
+
+和torch.cat的区别 **cat = 平铺 , stack = 叠层**
+``` python
+
+a = torch.tensor([1,2,3])
+b = torch.tensor([4,5,6])
+
+torch.stack([a,b]).shape   # → (2,3)
+torch.cat([a,b]).shape     # → (6,)
+
+```
+### 11.torch.cat的用法 ###
+
+**是在“已有维度”上拼接，不会增加新维度。**
+```python
+torch.cat(tensors, dim=0)
+# tensors：张量列表，如 [t1, t2, t3...]
+# dim：在哪一个维度上进行拼接,要求：除拼接维外，其余维度必须严格相同
+```
+
+*一维张量的cat拼接*
+```python
+a = torch.tensor([[2,3,4]])  # tensor[2,3,4] torch.Size([1,3]) 1
+b = torch.tensor([[5,6,7]])
+
+c = torch.cat([a,b],0)
+# tensor([1, 2, 3, 4, 5, 6]) torch.Size([6]) 1
+
+```
+
+*在行方向拼接(立起来)(dim=0),拼接维度可以不同，其他维度必须相同*
+```python
+a = torch.tensor([[1,2,3],[4,5,6]]) # tensor([[1, 2, 3],
+                                             [4, 5, 6]])  torch.Size([2, 3]) 2
+b = torch.tensor([[7,8,9]])
+
+c = torch.cat([a,b],dim=0)
+
+tensor([[1, 2, 3],
+        [4, 5, 6],
+        [7, 8, 9]]) torch.Size([3, 3]) 3
+
+```
+
+*在列方向拼接(躺下去)(dim=1),拼接维度可以不同，其他维度必须相同*
+```python
+a = torch.tensor([[1,2,3],[4,5,6]]) # tensor([[1, 2, 3],
+                                             [4, 5, 6]])  torch.Size([2, 3]) 2
+b = torch.tensor([[7,8],[9,10]]) # torch.Size([2, 2]) 2
+
+c = torch.cat([a,b],dim=1)
+
+tensor([[ 1,  2,  3,  7,  8],
+        [ 4,  5,  6,  9, 10]]) torch.Size([2, 5]) 2
+
+```
+
+
