--- a/2 预备知识/2.1 数据操作/2.1.1 入门.md
+++ b/2 预备知识/2.1 数据操作/2.1.1 入门.md
@@ -1,3 +1,13 @@
+torch.randn(size) 随机生成均值0，方差1的正态分布(高斯分布)数据，**size=2,一维** **长度为2 size=(2,3),二维 长度为2和3**
+
+torch.rand(size) 随机生成符合[0, 1)均匀分布数据 
+
+torch.randint(low, high, size) 随机生成在范围[low,high)的整数
+
+torch.normal(mean,std,size) 随机生成均值为mean，标准差为std的正态分布(高斯分布)数据
+
+torch.tensor(data, dtype=None, device=None) 直接把 Python 数据转成 Tensor,其中默认 dtype 由数据推断
+
 x.shape/x.size
 
 x.view/x.reshape
