--- a/2 预备知识/2.1 数据操作/2.1.2 运算符.md
+++ b/2 预备知识/2.1 数据操作/2.1.2 运算符.md
@@ -1,1 +1,50 @@
+常见的运算符有 +、-、*、/、**
 
+
+向量点积: torch.matmul(张量a,张量b) / 张量a@张量b / torch.dot(张量a,张量b) 
+
+矩阵与向量相乘：A @ x
+
+矩阵乘法：torch.matmul / @ / torch.mm
+
+**矩阵乘法 + 广播：torch.matmul支持广播**
+
+matmul 广播是指**最后两维做矩阵乘法，前面所有维度参与广播**
+
+例如:
+```python
+A = torch.randn(2, 3, 4, 5)
+B = torch.randn(5, 6) # 
+
+C = torch.matmul(A, B) 
+print(C.shape)
+
+# torch.Size([2,3,4,6])
+
+```
+
+批量矩阵乘法: torch.bmm 
+
+公式:(batch, m, n) × (batch, n, p) = (batch,m,p),**不能广播**
+
+
+## X.sum 张量求和 ## 
+
+1) 按维度求和 = 沿着 **行方向** 求和（得到每行的和）(X.sum(dim=1)) + 沿着 **列方向** 求和（得到每列的和）(X.sum(dim=0))
+  行方向求和的shape变化: (2, 3)  →  (2,) 列方向求和的shape变化: (2, 3)  →  (,3)
+
+
+2) 保持维度：keepdim=True，可用于保持 shape（常用于广播）
+
+```python
+x = torch.tensor([[1,2,3],[4,5,6]])
+row_sum = x.sum(dim=1,keepdim=True)
+col_sum = x.sum(dim=0,keepdim=True)
+
+row_sum.shape,col_sum.shape
+
+#(torch.Size([2, 1]), torch.Size([1, 3]))
+
+```
+
+tensor的运算是**按元素**计算
