--- a/2 预备知识/2.1 数据操作/2.1.3 广播机制.md
+++ b/2 预备知识/2.1 数据操作/2.1.3 广播机制.md
@@ -1,1 +1,113 @@
+### 广播机制判断流程: ###
 
+#### 1.靠右对齐，缺维补 1
+#### 2.逐维判断，判断条件是当两个维度“完全相等”或者“其中之一为1”才可以广播
+
+
+比如:
+```python
+
+(2, 1, 4)
+(3, 4)
+
+靠右对齐 & 缺维补 1：
+
+(2, 1, 4)
+(1, 3, 4)
+
+逐维判断:
+
+4 vs 4 ✔
+1 vs 3 ✔（1 可扩展）
+2 vs 1 ✔（1 可扩展）
+
+得出结论：可广播
+
+```
+
+再比如:
+
+```python
+
+(2, 3, 4)
+(2, 4)
+
+补齐 & 对齐：
+
+(2, 3, 4)
+(1, 2, 4)
+
+逐维判断:
+
+4 vs 4 ✔
+3 vs 2 ❌（（不相等且都非 1）
+
+
+得出结论：不可广播
+
+```
+### broadcast_to、expand、repeat的区别 ###
+<img width="953" height="331" alt="image" src="https://github.com/user-attachments/assets/ce065553-cbdf-4de4-8c51-e3c8066b9cea" />
+
+
+#### torch.broadcast_to(x,shape) 
+
+*(1,3) -> (2,3)*
+
+```python
+
+import torch
+x = torch.tensor([1,2,3])  # torch.Size(3)
+y = torch.broadcast_to(x,(2,3))
+
+# torch.Size(2,3)
+#tensor([[1, 2, 3],
+#        [1, 2, 3]])
+
+```
+特点:只是“看起来”被扩展,没有真正复制两行,不能写入（否则报错）
+
+#### x.expand(new_shape) 
+
+*(3,1) -> (3,4)*
+
+```python
+
+import torch
+x = torch.tensor([[1],[2],[3]])  # torch.Size(3,1)
+y = x.expand(3,4)
+
+# torch.Size(3,4)
+#tensor([[1,1,1,1],
+#        [2,2,2,2],
+#        [3,3,3,3]])
+
+
+```
+特点:只是“看起来”被扩展,没有真正复制两行,写入威胁
+
+*可以用 -1 表示：保持原尺寸*
+```python
+x = torch.randn(3, 1, 4)
+y = x.expand(-1, 5, -1)
+
+print(y.shape)   # (3, 5, 4)
+```
+
+#### x.repeat(repeat_time) 
+
+*(3,1) -> (3,4)*
+
+```python
+
+import torch
+x = torch.tensor([[1],[2],[3]])  # torch.Size(3,1)
+y = x.repeat(3,4) #真的复制了 4 倍数据,并且可以写入
+
+# torch.Size(3,4)
+#tensor([[1,1,1,1],
+#        [2,2,2,2],
+#        [3,3,3,3]])
+
+
+```
