--- a/2 预备知识/2.1 数据操作/2.1.4 索引和切片.md
+++ b/2 预备知识/2.1 数据操作/2.1.4 索引和切片.md
@@ -1,1 +1,85 @@
+### 1.基本切片
 
+*取前三个*
+x[:3]
+
+*取后两个*
+x[-2:]
+
+*取中间(左闭右开)*
+x[1:4] #1,2,3
+
+```python
+import torch
+x = torch.tensor([10, 20, 30, 40, 50])
+
+#取前三个
+x[:3]
+
+*取后两个
+x[:-2]
+
+*取中间(左闭右开)*
+x[1:4]
+
+```
+
+### 2.多维切片（矩阵/高维张量）
+
+*取二维张量(矩阵)的第0行*
+x[0]
+
+*取二维张量(矩阵)的第1列*
+x[:,1]
+
+*取子矩阵(前两行前两列)*
+x[:2,:2]
+
+
+``` python
+import torch
+x = torch.tensor([[1,2,3],[4,5,6],[7,8,9])
+
+#取二维张量(矩阵)的第0行
+x[0]
+
+#取二维张量(矩阵)的第1列
+x[:,1]
+
+#取子矩阵(前两行前两列)
+x[:2,:2]
+```
+### 3.步长切片
+
+*每隔2个取一个数*
+x[::2]
+
+
+*取 2~8 中的奇数*
+x[3:9:2]
+
+``` python
+x = torch.arange(9)
+
+#每隔2个取一个数
+x[::2]
+
+#倒序
+x[::-1]
+
+#取 2~8 中的奇数
+x[3:9:2]
+```
+
+### 4.省略号 ...
+在一维情况下（其实没啥用），二维情况下：... = 自动补 :
+在三维及以上：...的威力开始体现
+*前面维度都不变，取最后一维 index=0*
+*取第一维=1 后面全部都不变*
+```python
+
+x = torch.randn(2, 3, 4, 5)
+
+x[...,0]
+
+```
