--- a/2 预备知识/2.2 数据预处理/2.2.1 读取数据集.md
+++ b/2 预备知识/2.2 数据预处理/2.2.1 读取数据集.md
@@ -1,1 +1,150 @@
+练习1：
 
+在当前目录下创建一个名为data的文件夹，在data文件夹中创建一个csv文件，并且写入表格，表头为"NumRooms","Alley","Price",
+
+其中NumRooms=NaN,2,4,NaN;Alley=Pave,NaN,NaN,NaN;price=12,13,14,15
+
+```python
+import os #导入python的标准库
+
+os.makedirs(os.path.join('.','datass'),exist_ok=True) #创建一个名为datass的文件夹
+data_file = os.path.join('.','datass','house_tiny.csv') #创建文件
+
+with open(data_file,'w') as f:
+  f.write('NumRooms,Alley,Price\n') #第一行是表头
+  f.write('NA,Pave,127500\n')
+  f.write('2,NA,106000\n')
+  f.write('4,NA,178100\n')
+  f.write('NA,NA,140000\n')
+
+#利用pandas读取数据
+
+import pandas as pd
+
+data = pd.read_csv(data_file)
+```
+
+练习2：
+
+创建一个表头为"NumRooms","Alley","Price",其中NumRooms=NaN,2,4,NaN;Alley=Pave,NaN,NaN,NaN;price=12,13,14,15的DataFrame
+
+```python
+import pandas as pd
+import numpy as np
+
+data = pd.DataFrame(
+    {
+        "NumRooms":[np.nan,2,4,np.nan],
+        "Alley":["Pave",np.nan,np.nan,np.nan],
+        "Price":[127500,106000,178100,140000]
+    }
+)
+data
+```
+
+练习2.1：
+    
+    (data.iloc)
+    
+    取前两行、所有列 
+
+    data.iloc[:2, :]
+
+    取第 0 和第 2 行、第 0 和第 2 列
+
+    data.iloc[[0, 2], [0, 2]]
+
+    取第 2 列
+
+    data.iloc[:, 2]
+
+    (data.loc)
+
+    取 Price > 140000 的所有行
+
+    data.loc[data["Price"] > 140000]
+
+    取 Price > 140000 且只保留 NumRooms 与 Price 两列
+
+    data.loc[data["Price"] > 140000, ["NumRooms", "Price"]]
+
+    选出 Alley 为缺失值的行
+
+    data.loc[data["Alley"].isna()]
+
+    (data.fillna)
+
+    用 3 填充 NumRooms 中的缺失值
+
+    data["NumRooms"].fillna(3, inplace=True)
+
+    用 "None" 填充 Alley 中缺失值
+
+    data["Alley"].fillna("None", inplace=True)
+
+    用该列平均数填 NumRooms 的缺失值
+
+    data["NumRooms"] = data["NumRooms"].fillna(data["NumRooms"].mean())
+
+    (pd.get_dummies)
+
+    对 Alley 列做独热编码
+
+    pd.get_dummies(data["Alley"])
+
+    保留缺失为单独一类（dummy_na=True）
+
+    pd.get_dummies(data["Alley"], dummy_na=True)
+
+    要求得到 0/1，不要 True/False
+
+    pd.get_dummies(data["Alley"], dummy_na=True, dtype=int)
+
+    
+
+练习3：把 data 处理为 可输入神经网络的特征矩阵 X
+步骤要求：
+
+1) 用均值填充 NumRooms
+
+2) 用 "None" 填充 Alley
+
+3) 对 Alley one-hot 编码
+
+4) 得到最终 DataFrame
+
+5) 再转成 torch.tensor
+
+
+  # 1. 拆分
+  inputs = data[["NumRooms", "Alley"]]
+  
+  # 2. 数值列填均值
+  inputs["NumRooms"] = inputs["NumRooms"].fillna(inputs["NumRooms"].mean())
+  
+  # 3. 类别列填 None
+  inputs["Alley"] = inputs["Alley"].fillna("None")
+  
+  # 4. One-Hot 编码
+  inputs = pd.get_dummies(inputs, dummy_na=False, dtype=int)
+  
+  print(inputs)
+
+  # 5.转换成张量格式
+  import torch
+
+  X = torch.tensor(inputs.to_numpy(dtype=float))
+  
+  print(X)
+
+
+dropna：删除含缺失值的行/列
+
+
+inputs,outputs = data.iloc[:,0:2],data.iloc[:,2]
+
+inputs = inputs.fillna(inputs.mean(numeric_only=True))
+
+inputs = pd.get_dummies(inputs,dummy_na=True,dtype=int)
+
+inputs
